SCRUM-92: Create Plan CRUD and prepared methods and tests to finish for Szymon